<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingBottom="13dp">




    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textColor="@color/colorPrimaryDark"
        android:padding="18dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description"
        android:padding="18dp"
        android:src="@drawable/ic_launcher_background"
        android:text="@string/avatar"
        tools:ignore="MissingConstraints"
         />

    <TextView
        android:id="@+id/followers"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/followers"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="79dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/repositories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/repositories"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="144dp"
        tools:ignore="MissingConstraints" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view"/>


</LinearLayout>